--- a/integration-tests/mongodb-grouped/pom.xml
+++ b/integration-tests/mongodb-grouped/pom.xml
@@ -103,6 +103,7 @@
     </build>
 
     <profiles>
+        <!-- TODO: https://github.com/apache/camel-quarkus/issues/6341
         <profile>
             <id>native</id>
             <activation>
@@ -130,6 +131,7 @@
                 </plugins>
             </build>
         </profile>
+        -->
         <profile>
             <id>virtualDependencies</id>
             <activation>
