--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -33,6 +33,7 @@ updates:
       - dependency-name: "com.azure:azure-core-http-vertx"
       - dependency-name: "com.hazelcast:quarkus-hazelcast-client-bom"
       - dependency-name: "com.squareup.okhttp3:okhttp"
+      - dependency-name: "io.swagger.codegen.v3:swagger-codegen-generators"
       - dependency-name: "org.amqphub.quarkus:quarkus-qpid-jms-bom"
       # Test dependencies
       - dependency-name: "org.wiremock:wiremock-standalone"
