--- a/poms/bom/pom.xml
+++ b/poms/bom/pom.xml
@@ -7006,6 +7006,10 @@
                         <artifactId>jsr305</artifactId>
                     </exclusion>
                     <exclusion>
+                        <groupId>io.swagger</groupId>
+                        <artifactId>swagger-codegen</artifactId>
+                    </exclusion>
+                    <exclusion>
                         <groupId>javax.validation</groupId>
                         <artifactId>validation-api</artifactId>
                     </exclusion>
