--- a/pom.xml
+++ b/pom.xml
@@ -223,40 +223,40 @@
         <azurite.container.image>mcr.microsoft.com/azure-storage/azurite:3.31.0</azurite.container.image>
         <calculator-ws.container.image>quay.io/l2x6/calculator-ws:1.2</calculator-ws.container.image>
         <cassandra.container.image>docker.io/cassandra:4.1.3</cassandra.container.image>
-        <consul.container.image>docker.io/hashicorp/consul:1.16</consul.container.image>
-        <couchbase.container.image>docker.io/couchbase/server:7.2.0</couchbase.container.image>
+        <consul.container.image>docker.io/hashicorp/consul:1.19</consul.container.image>
+        <couchbase.container.image>docker.io/couchbase/server:7.2.5</couchbase.container.image>
         <couchdb.container.image>docker.io/couchdb:2.3.1</couchdb.container.image>
         <eclipse-mosquitto.container.image>docker.io/eclipse-mosquitto:2.0.18</eclipse-mosquitto.container.image>
-        <elasticsearch.container.image>docker.io/elastic/elasticsearch:8.13.2</elasticsearch.container.image>
+        <elasticsearch.container.image>docker.io/elastic/elasticsearch:8.15.1</elasticsearch.container.image>
         <eventhubs-emulator.container.image>mcr.microsoft.com/azure-messaging/eventhubs-emulator:latest</eventhubs-emulator.container.image>
         <fhir.container.image.base>docker.io/hapiproject/hapi</fhir.container.image.base>
-        <fhir.container.image>${fhir.container.image.base}:v6.8.3</fhir.container.image>
+        <fhir.container.image>${fhir.container.image.base}:v7.2.0</fhir.container.image>
         <fhir-dstu.container.image>${fhir.container.image.base}:v4.2.0</fhir-dstu.container.image>
-        <google-cloud-sdk.container.image>gcr.io/google.com/cloudsdktool/cloud-sdk:441.0.0-emulators</google-cloud-sdk.container.image>
-        <google-storage.container.image>docker.io/fsouza/fake-gcs-server:1.47.3</google-storage.container.image>
+        <google-cloud-sdk.container.image>gcr.io/google.com/cloudsdktool/cloud-sdk:492.0.0-emulators</google-cloud-sdk.container.image>
+        <google-storage.container.image>docker.io/fsouza/fake-gcs-server:1.49.3</google-storage.container.image>
         <greenmail.container.image>docker.io/greenmail/standalone:2.0.0</greenmail.container.image>
         <hashicorp-vault.container.image>docker.io/hashicorp/vault:1.17</hashicorp-vault.container.image>
         <ibm-mq.container.image>icr.io/ibm-messaging/mq:9.4.0.5-r1</ibm-mq.container.image>
-        <influxdb.container.image>docker.io/influxdb:1.8.10</influxdb.container.image>
+        <influxdb.container.image>docker.io/influxdb:1.8.10-alpine</influxdb.container.image>
         <kafka.container.image>quay.io/strimzi-test-container/test-container:latest-kafka-3.8.0</kafka.container.image>
         <kafka-oauth.container.image>quay.io/strimzi/kafka:latest-kafka-3.7.0</kafka-oauth.container.image>
-        <keycloak.container.image>quay.io/keycloak/keycloak:23.0.7</keycloak.container.image>
+        <keycloak.container.image>quay.io/keycloak/keycloak:25.0.4</keycloak.container.image>
         <kudu.container.image>docker.io/apache/kudu:1.17.0</kudu.container.image>
-        <localstack.container.image>docker.io/localstack/localstack:3.3.0</localstack.container.image>
+        <localstack.container.image>docker.io/localstack/localstack:3.7.2</localstack.container.image>
         <lra-coordinator.container.image>quay.io/jbosstm/lra-coordinator:7.0.1.Final-3.8.3</lra-coordinator.container.image>
-        <minio.container.image>docker.io/minio/minio:RELEASE.2023-07-21T21-12-44Z</minio.container.image>
-        <mysql.container.image>docker.io/mysql:5.7</mysql.container.image>
-        <mongodb.container.image>docker.io/mongo:4.4</mongodb.container.image>
-        <nats.container.image>docker.io/nats:2.10.14</nats.container.image>
-        <openssh-server.container.image>docker.io/linuxserver/openssh-server:version-9.3_p2-r0</openssh-server.container.image>
+        <minio.container.image>docker.io/minio/minio:RELEASE.2024-09-13T20-26-02Z</minio.container.image>
+        <mysql.container.image>docker.io/mysql:8.4</mysql.container.image>
+        <mongodb.container.image>docker.io/mongo:7.0</mongodb.container.image>
+        <nats.container.image>docker.io/nats:2.10.18</nats.container.image>
+        <openssh-server.container.image>docker.io/linuxserver/openssh-server:version-9.7_p1-r4</openssh-server.container.image>
         <postgres.container.image>docker.io/postgres:15.0</postgres.container.image>
         <postgres-debezium.container.image>docker.io/debezium/postgres:15-alpine</postgres-debezium.container.image>
-        <qdrant.container.image>docker.io/qdrant/qdrant:v1.8.4-unprivileged</qdrant.container.image>
-        <rabbitmq.container.image>docker.io/rabbitmq:3.9.29-management-alpine</rabbitmq.container.image>
-        <redis.container.image>docker.io/redis:7.0.12</redis.container.image>
+        <qdrant.container.image>docker.io/qdrant/qdrant:v1.9.7-unprivileged</qdrant.container.image>
+        <rabbitmq.container.image>docker.io/rabbitmq:3.13.7-management-alpine</rabbitmq.container.image>
+        <redis.container.image>docker.io/redis:6.2.14-alpine</redis.container.image>
         <smb.container.image>quay.io/jamesnetherton/camel-smb-test-server:1.0.0</smb.container.image>
-        <splunk.container.image>docker.io/splunk/splunk:9.2.0</splunk.container.image>
-        <sql-server.container.image>mcr.microsoft.com/mssql/server:2017-CU12</sql-server.container.image>
+        <splunk.container.image>docker.io/splunk/splunk:9.3.1</splunk.container.image>
+        <sql-server.container.image>mcr.microsoft.com/mssql/server:2022-latest</sql-server.container.image>
 
         <!-- Plugin configuration through properties  -->
 
