--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -31,12 +31,12 @@ asciidoc:
     camel-version: 4.8.0 # replace ${camel.version}
     camel-docs-version: 4.8.x
     camel-quarkus-version: 3.16.0 # replace ${camel-quarkus.version}
-    quarkus-version: 3.15.1 # replace ${quarkus.version}
+    quarkus-version: 3.16.0.CR1 # replace ${quarkus.version}
     graalvm-version: 23.1.2 # replace ${graalvm.version}
     graalvm-docs-version: jdk21 # replace ${graalvm-docs.version}
     mapstruct-version: 1.6.0 # replace ${mapstruct.version}
     min-maven-version: 3.8.2 # replace ${min-maven-version}
-    target-maven-version: 3.9.8 # replace ${target-maven-version}
+    target-maven-version: 3.9.9 # replace ${target-maven-version}
 
     # Attributes used in xrefs to other Antora components
     cq-camel-components: components
