--- a/integration-tests-support/certificate-generator/pom.xml
+++ b/integration-tests-support/certificate-generator/pom.xml
@@ -33,6 +33,7 @@
         <dependency>
             <groupId>io.smallrye.certs</groupId>
             <artifactId>smallrye-certificate-generator-junit5</artifactId>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.camel.quarkus</groupId>
