--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -26,7 +26,7 @@ asciidoc:
 
     # Project versions
     camel-version: 4.8.0 # replace ${camel.version}
-    camel-docs-version: next
+    camel-docs-version: 4.8.x
     camel-quarkus-version: 3.15.1 # replace ${camel-quarkus.version}
     quarkus-version: 3.15.0 # replace ${quarkus.version}
     graalvm-version: 23.1.2 # replace ${graalvm.version}
@@ -36,7 +36,7 @@ asciidoc:
     target-maven-version: 3.9.8 # replace ${target-maven-version}
 
     # Attributes used in xrefs to other Antora components
-    cq-camel-components: next@components
+    cq-camel-components: components
     doc-link-icon-lock: "icon:lock"
     quarkus-examples-version: latest
 
