--- a/extensions/aws-bedrock/runtime/pom.xml
+++ b/extensions/aws-bedrock/runtime/pom.xml
@@ -41,6 +41,10 @@
             <artifactId>camel-quarkus-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.camel.quarkus</groupId>
+            <artifactId>camel-quarkus-support-aws2</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-aws-bedrock</artifactId>
         </dependency>
