Upgrade Quarkus Langchain4j to 0.19.0.CR1

--- a/integration-tests/langchain4j-chat/src/main/resources/application.properties
+++ b/integration-tests/langchain4j-chat/src/main/resources/application.properties
@@ -14,7 +14,7 @@
 ## See the License for the specific language governing permissions and
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
-quarkus.langchain4j.ollama.chat-model.model-id=orca-mini
+quarkus.langchain4j.ollama.chat-model.model-name=orca-mini
 quarkus.langchain4j.ollama.chat-model.temperature=0.3
 quarkus.langchain4j.ollama.timeout=30s
 
